# Scu-icu-team-ahhhhh

./: CMakeLists.txt  build.bat  index.html  init.sql  view_icons.html
build_clean/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  campus_trade.sln  campus_trade.vcxproj  campus_trade.vcxproj.filters
build_clean/campus_trade.dir/Debug/campus_trade.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  campus_trade.lastbuildstate
campus-trade-front/css/: style.css
campus-trade-front/html/: goodList.html  goodsDetail.html  index.html  login.html  mine.html  order.html  publish.html  statistics.html  systemConfig.html
front end/: 1.login.html  1.register.html  2.index.html  2.register.html  4.detail.html  4.publish.html  6.orders.html  7.config.html  7.profile.html  8.statistics.html
frontend/: config.html  detail.html  index.html  login.html  orders.html  profile.html  publish.html  register.html  statistics.html
frontend/css/: common.css
frontend/js/: api.js
include/cache/: CacheManager.h
include/db/: ConnectionPool.h
include/model/: Goods.h  Transaction.h  User.h
include/service/: ConfigService.h  GoodsService.h  StatisticsService.h  TransactionService.h  UserService.h
include/utils/: HashUtil.h
lib/: httplib.h  json.hpp
secondhand/: index.html
sencondhand-v2/: banner_b64_0.txt  banner_b64_1.txt  banner_b64_2.txt  index.html  ui.docx
src/: main.cpp
src/cache/: CacheManager.cpp
src/db/: ConnectionPool.cpp
src/service/: ConfigService.cpp  GoodsService.cpp  StatisticsService.cpp  TransactionService.cpp  UserService.cpp
src/utils/: HashUtil.cpp
二手/: CMakeLists.txt  README.md  vcpkg.json
二手/config/: config.json
二手/frontend/: index.html
二手/frontend/css/: style.css
二手/frontend/js/: api.js  app.js
二手/sql/: init.sql
二手/src/: main.cpp
二手/src/console/: ConsoleApp.cpp
二手/src/controller/: CategoryController.cpp  CategoryController.h  FavoriteController.cpp  FavoriteController.h  OrderController.cpp  OrderController.h  ProductController.cpp  ProductController.h  UserController.cpp  UserController.h
二手/src/dao/: CategoryDAO.cpp  CategoryDAO.h  FavoriteDAO.cpp  FavoriteDAO.h  OrderDAO.cpp  OrderDAO.h  ProductDAO.cpp  ProductDAO.h  UserDAO.cpp  UserDAO.h
二手/src/middleware/: AuthMiddleware.cpp  AuthMiddleware.h
二手/src/model/: Category.h  Favorite.h  Order.h  Product.h  User.h
二手/src/utils/: FileUtil.cpp  FileUtil.h  JwtUtil.cpp  JwtUtil.h  PasswordUtil.cpp  PasswordUtil.h  RedisUtil.cpp  RedisUtil.h
校园二手交易平台/: 校园二手交易平台.sln
校园二手交易平台/校园二手交易平台/: common.h  module.cpp  module_admin.cpp  module_admin.h  module_comment.cpp  module_comment.h  module_goods.cpp  module_goods.h  module_order.cpp  module_order.h  module_ui.cpp  module_ui.h  module_user.h  校园二手交易平台.vcxproj  校园二手交易平台.vcxproj.filters  源.cpp
校园二手交易平台/校园二手交易平台/x64/Debug/: vc143.idb
校园二手交易平台/校园二手交易平台/x64/Debug/校园二手交易平台.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  校园二手交易平台.lastbuildstate
